--- a/package.json
+++ b/package.json
@@ -18,12 +18,12 @@
     "express-rate-limit": "^7.4.0",
     "express-validator": "^7.1.0",
     "helmet": "^7.1.0",
+    "ioredis": "^5.4.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.2",
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.14",
     "rate-limit": "^0.1.1",
-    "redis": "^4.7.0",
     "socket.io": "^4.7.5",
     "swagger-ui-express": "^5.0.1",
     "winston": "^3.13.1",
