--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "ioredis": "^5.4.1",
     "js-yaml": "^4.1.0",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "mongoose": "^8.5.2",
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.14",
