--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     volumes:
       - .:/usr/src/app
       - /usr/src/app/node_modules
-      - app_logs:/app/logs
+      - logs:/app/logs
     ports:
       - '5001:5001'
     depends_on:
