--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "Nitesh Ramola",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-ses": "^3.623.0",
+    "@aws-sdk/credential-provider-node": "^3.623.0",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -24,10 +26,12 @@
     "moment": "^2.30.1",
     "mongoose": "^8.5.2",
     "morgan": "^1.10.0",
+    "node-schedule": "^2.1.1",
     "nodemailer": "^6.9.14",
     "rate-limit": "^0.1.1",
     "socket.io": "^4.7.5",
     "swagger-ui-express": "^5.0.1",
+    "twilio": "^5.2.2",
     "winston": "^3.13.1",
     "winston-daily-rotate-file": "^5.0.0"
   },
