--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,12 +23,26 @@ jobs:
 
       - name: Sync files to EC2
         run: |
-          rsync -avz -e "ssh -i /tmp/your-key.pem -o StrictHostKeyChecking=no" --exclude='.git' . ec2-user@${{secrets.EC2_PUBLIC_DNS}}:/home/ec2-user/lens-corp-assignment
+          rsync -avz -e "ssh -i /tmp/your-key.pem -o StrictHostKeyChecking=no" --exclude='.git' . ec2-user@${{ secrets.EC2_PUBLIC_DNS }}:/home/ec2-user/lens-corp-assignment
 
       - name: SSH into EC2 and deploy with Docker Compose
         run: |
-          ssh -i /tmp/your-key.pem -o StrictHostKeyChecking=no ec2-user@${{secrets.EC2_PUBLIC_DNS}} << 'EOF'
+          ssh -i /tmp/your-key.pem -o StrictHostKeyChecking=no ec2-user@${{ secrets.EC2_PUBLIC_DNS }} << EOF
             cd /home/ec2-user/lens-corp-assignment
+            export PORT=${{ secrets.PORT }}
+            export MONGO_URI=${{ secrets.MONGO_URI }}
+            export REDIS_URL=${{ secrets.REDIS_URL }}
+            export JWT_SECRET=${{ secrets.JWT_SECRET }}
+            export JWT_EXPIRE=${{ secrets.JWT_EXPIRE }}
+            export JWT_REFRESH_SECRET=${{ secrets.JWT_REFRESH_SECRET }}
+            export JWT_REFRESH_EXPIRE=${{ secrets.JWT_REFRESH_EXPIRE }}
+            export TWILIO_AUTH_TOKEN=${{ secrets.TWILIO_AUTH_TOKEN }}
+            export TWILIO_ACCOUNT_SID=${{ secrets.TWILIO_ACCOUNT_SID }}
+            export TWILIO_PHONE_NUMBER=${{ secrets.TWILIO_PHONE_NUMBER }}
+            export AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}
+            export AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}
+            export AWS_REGION=${{ secrets.AWS_REGION }}
+            export EMAIL_SENDER_ID=${{ secrets.EMAIL_SENDER_ID }}
             docker-compose pull
             docker-compose up -d --remove-orphans
           EOF
